<resources>
    <string name="app_name">StoryApp</string>
    <string name="token">Bearer %s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="hint_name">Input Your Name</string>
    <string name="hint_email">Input Your Email</string>
    <string name="hint_password">Input Your Password</string>
    <string name="invalid_name">Invalid format name</string>
    <string name="invalid_email">Invalid format email</string>
    <string name="invalid_password">Invalid format password</string>
    <string name="login_success">Success Login</string>
    <string name="register_success">Success Register</string>
    <string name="not_have_account_register">Not have account ?</string>
    <string name="have_account_login">Have account ?</string>
    <string name="back_button">Back Button</string>
    <string name="settings">Setting</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="setting_language">Language Setting</string>
    <string name="logout_description">Are you sure to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="story_image">Image Story</string>
    <string name="add_story">Add Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="add_image">Add Image</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="no_have_permission">No Have Permission</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_reject">Permission Reject</string>
    <string name="invalid_image">Please Upload Image First</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_from_camera">Upload Photo From Camera</string>
    <string name="upload_from_gallery">Upload Photo From Gallery</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="appwidget_text">STORY APP WIDGET</string>
    <string name="empty_text">NO DATA</string>
    <string name="maps">Maps</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="image_story">Image Story</string>
    <string name="retry">Retry</string>
    <string name="Loading">Loading</string>
    <string name="share_my_location">Share my location</string>
    <string name="access_location_off">Access location off</string>
    <string name="turn_on">Turn On</string>
</resources>