<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.settings.SettingsFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dimens_medium"
        android:src="@drawable/ic_round_keyboard_backspace"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MdcTypographyStyles.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_medium"
        android:layout_marginEnd="@dimen/dimens_large"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_back"
        app:layout_constraintTop_toBottomOf="@+id/img_back" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting_language"
        android:src="@drawable/ic_round_language"
        app:layout_constraintBottom_toBottomOf="@+id/tv_language"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/tv_language" />

    <TextView
        android:id="@+id/tv_language"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_medium"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting_language"
        android:src="@drawable/ic_round_logout"
        app:layout_constraintBottom_toBottomOf="@+id/tv_log_out"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/tv_log_out" />

    <TextView
        android:id="@+id/tv_log_out"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_medium"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_language" />

</androidx.constraintlayout.widget.ConstraintLayout>