<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.story.StoryAddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:navigationIcon="@drawable/ic_round_keyboard_backspace_white"
            app:title="@string/add_story"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_add_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/dimens_medium"
        android:contentDescription="@string/add_image"
        app:srcCompat="@drawable/ic_round_add_a_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_medium"
        app:boxBackgroundColor="@color/color_soft_gray"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_add_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="start"
            android:hint="@string/description"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_my_location"
        app:layout_constraintBottom_toBottomOf="@+id/switch_share_my_location"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/switch_share_my_location" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_share_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        style="@style/TextAppearance.MdcTypographyStyles.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/switch_share_my_location" />


</androidx.constraintlayout.widget.ConstraintLayout>