<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_notification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="#99000000"
    android:elevation="5dp"
    android:visibility="visible"
    app:behavior_hideable="true"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="Overdraw">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bottom_sheet_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="75dp"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_blue_ice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_medium"
        android:layout_marginTop="@dimen/dimens_medium"
        android:layout_marginEnd="@dimen/dimens_medium"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_medium"
        android:layout_marginEnd="@dimen/dimens_medium"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_medium"
        android:layout_marginEnd="@dimen/dimens_medium"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dimens_medium"
        android:layout_marginBottom="@dimen/dimens_medium"
        android:src="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        android:contentDescription="@string/image_story" />

</androidx.constraintlayout.widget.ConstraintLayout>