<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.onedev.storyapp.core.data.source.remote.response.Story.GetResponse.DataStory" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.StoryDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/AppTheme.Toolbar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:navigationIcon="@drawable/ic_round_keyboard_backspace_white"
                app:title="@string/detail_story"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/dimens_small"
            android:contentDescription="@string/story_image"
            android:loadImage="@{viewmodel.photoUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_medium"
            android:layout_marginTop="@dimen/dimens_small"
            android:text="@{viewmodel.name}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_medium"
            android:layout_marginBottom="@dimen/dimens_small"
            android:text="@{viewmodel.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/app_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>